Fix: File path typo.

--- a/res/index.html
+++ b/res/index.html
@@ -13,7 +13,7 @@
 
     <script>
       // You can also require other files to run in this process
-      require('../render/index-renderer.js')
+      require('../renderer/index-renderer.js')
     </script>
   </body>
 </html>
