Add: Version code display.

--- a/res/index.html
+++ b/res/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Redump GDI to General GDI converter</h1>
+    <label id="txt-ver">Version: </label>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     <!--We are using Node.js <script>document.write(process.versions.node)</script>,-->
     <!--Chromium <script>document.write(process.versions.chrome)</script>,-->
